# feedling

./: CMakeLists.txt  LICENSE
doc/: RSS-0.91.html  RSS-0.92.html  RSS-1.0.html  RSS-2.0.html
doc/RSS-0.91_files/: rssboard
doc/RSS-1.0_files/: style.css
doc/RSS-2.0_files/: rssboard
res/ui/: main.qml
src/: Application.cpp  Application.hpp  AtomParser.cpp  AtomParser.hpp  CMakeLists.txt  DownloadTask.cpp  DownloadTask.hpp  EntriesModel.cpp  EntriesModel.hpp  Entry.cpp  Entry.hpp  Feed.cpp  Feed.hpp  FeedParser.cpp  FeedParser.hpp  FeedsModel.cpp  FeedsModel.hpp  FeedsModelItem.cpp  FeedsModelItem.hpp  Fetcher.cpp  Fetcher.hpp  FileTreeStorage.cpp  FileTreeStorage.hpp  Folder.cpp  Folder.hpp  IStorage.cpp  IStorage.hpp  ModelTree.cpp  ModelTree.hpp  Presenter.cpp  Presenter.hpp  RSSParser.cpp  RSSParser.hpp  TextFileDataStore.cpp  TextFileDataStore.hpp  TreeItem.cpp  TreeItem.hpp  View.cpp  View.hpp  feedling.cpp  (+1 more)
src/test/: CMakeLists.txt  atom_test.xml  rss_test.xml  test_data.hpp.in  test_parser.cpp
src/ui/: MainWindow.cpp  MainWindow.hpp
test/: CMakeLists.txt  test_parser.cpp
test_base/: CMakeLists.txt
